[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://fonts/DecimaMonoCyr.otf" type="DynamicFontData" id=2]
[ext_resource path="res://sprites/background.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
dragger_visibility = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 32.0
custom_constants/margin_top = 15

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_top = 15.0
margin_right = 1024.0
margin_bottom = 32.0
size_flags_horizontal = 3
alignment = 1

[node name="MistakeLabel" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 510.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Ошибок: 0"
align = 1

[node name="PairsLabel" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Раскрыто пар: 0"
align = 1

[node name="Grid" type="Control" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2

[node name="WinLabel" type="Label" parent="VBoxContainer/CenterContainer"]
margin_left = 512.0
margin_top = 270.0
margin_right = 512.0
margin_bottom = 301.0
custom_fonts/font = SubResource( 3 )
